Nuevos pc personal

--- a/Funciones/index.html
+++ b/Funciones/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
     <!-- <script src="funciones-1.js"></script> -->
     <!-- <script src="funciones-2.-parametros.js"></script> -->
-    <script src="funciones-3-anonimas.js"></script>
-
+    <!-- <script src="funciones-3-anonimas.js"></script> -->
+    <!-- <script src="funciones-6-remplazo.js"></script>  -->
+    <script src="funciones-7-plantillas.js"></script>
 
 
 </head>
