--- a/DOM/index.html
+++ b/DOM/index.html
@@ -8,11 +8,21 @@
 </head>
 <body>
     <button id="button">Hola</button>
-    <div id="id_div"><label for="">Holaaa</label></div>
+    <h1>HOLAA</h1>
+    <div ><label id="id_div" for="">Holaaa</label></div>
+    <button id="stop">Stop</button>
+    <button id="start">Start</button>
+
     <!-- <script type="text/javascript" src="dom1-intro-modificaciones.js"></script> -->
     <!-- <script type="text/javascript" src="dom2-BOM.js"></script> -->
-    <script type="text/javascript" src="dom3-eventos.js"></script>
+    <!-- <script type="text/javascript" src="dom3-eventos.js"></script> -->
+    <script type="text/javascript" src="dom4-times.js"></script>
 
+
+    <label for="">
+        Escribre algo
+        <input type="text" name="" id="camponombre">
+    </label>
 
 </body>
 </html>
