--- a/Fetch/index.html
+++ b/Fetch/index.html
@@ -20,6 +20,10 @@
         <span class="loading">Cargando...</span>
     </div>
     <script type="text/javascript" src="javascript.js"></script>
+    <script type="text/javascript" src="try-catch.js"></script>
+    <script type="text/javascript" src="fechas.js"></script>
+
+
 
 </body>
 </html>
