--- a/TypeScript/POO/index.html
+++ b/TypeScript/POO/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POO and TypeScript</title>
     <!-- <script type="text/javascript" src="1-clase-json.js"></script> -->
-    <script type="text/javascript" src="2-hola-mundo.js"></script>
+    <script type="text/javascript" src="Clases/polera.js"></script>
 </head>
 <body>
     <h1>Programación orientada a objetos con TypeScript</h1>
